2012-03-06 arnaud.fontaine
* Remove Accessor Component, Interface Component and Mixin Component Portal Types until implementation has been written.

2012-03-06 arnaud.fontaine
* Allow to specify version per Components in migration view.

2012-03-06 arnaud.fontaine
* Show Component versions defined on the BusinessTemplate in ZODB Migration view.

2012-03-06 arnaud.fontaine
* Add registered version priority selection on BusinessTemplate_view for registering version priority of ZODB Components only for now.

2012-03-05 arnaud.fontaine
* Allow to run ZODB Test Component tests from Component Tool, likewise Class Tool.

2012-03-03 arnaud.fontaine
* Remove defined groups on ZODB Component portal types as it should not be considered as a Document for DMS for example.

2012-03-02 arnaud.fontaine
* Implement Test Component.

2012-03-02 arnaud.fontaine
* Do not acquire local roles for Document Component Portal Type.

2012-03-02 arnaud.fontaine
* Likewise Document Component, add SortIndex Property Sheets to Extension Component Portal Type.

2012-02-29 arnaud.fontaine
* Display error messages in Component_view which may have been raised when validating a Component in draft state.

2012-02-29 arnaud.fontaine
* Add portal_components to keep path list.

2012-02-29 arnaud.fontaine
* Add global action to manage ZODB Components.

2012-02-29 arnaud.fontaine
* Do not reset Components on ComponentTool _setObject and _delObject, instead reset in BusinessTemplate to avoid reset being triggered when a new Component is created.

2012-02-28 arnaud.fontaine
* Rename version_priority ERP5Site property to version_priority_list.

2012-02-28 arnaud.fontaine
* Use a ListField for version and proxify error messages field in Component view.

2012-02-28 arnaud.fontaine
* Show Component version on ComponentTool view.

2012-02-28 arnaud.fontaine
* Add Developer Role on portal_components which is the only Role with write permissions on portal_components and subobjects.