@@ -1,3 +1,7 @@
+2012-03-07 arnaud.fontaine
+* Allow to choose preferred source code editor in Preference view.
+* Use source code editor defined in Preference for Component_view.
+
 2012-03-06 arnaud.fontaine
 * Remove Accessor Component, Interface Component and Mixin Component Portal Types until implementation has been written.
 
